# Froggy3D

./: Frog3D.sln  README.md
Data/models/: box.gltf
Frog3D/: CMakeLists.txt  Frog3D.vcxproj  Frog3D.vcxproj.filters  Froggy3D.cpp
include/glad/: glad.h
lib/: assimp-vc143-mtd.lib
src/: glad.c
